// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 32,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      {
        "color": "#757575",
        "fontFamily": "Inter-Regular",
        "fontSize": 18,
        "lineHeight": 28,
      }
    }
  >
    noTransactionActivity
     
  </Text>
</View>
`;

exports[`renders loading 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 32,
      "paddingHorizontal": 16,
    }
  }
>
  <ActivityIndicator
    color="#1AB775"
    size="large"
    style={
      {
        "height": 108,
        "marginVertical": 20,
        "width": 108,
      }
    }
    testID="NoActivity/loading"
  />
  <Text
    style={
      {
        "color": "#757575",
        "fontFamily": "Inter-Regular",
        "fontSize": 18,
        "lineHeight": 28,
      }
    }
  >
    noTransactionActivity
     
  </Text>
</View>
`;
